2020-05-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Display_Gamma_Change): Improve readability.

2020-05-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview,ftstring,ftgrid] Unify gamma adjustments.

	* src/ftcommon.[ch] (FTDemo_Display_Gamma_Change): New function to
	adjust gamma with sRGB between 2.2 and 2.3.
	* src/ftview.c, src/ftstring.c, src/ftgrid.c (Process_Event): Use it.

2020-05-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Keep custom LCD filters normalized and balanced.

	Unorthodox filters are still available through the `-L' option.

	* src/ftview.c (event_fw_change): New function with distributed delta.
	(Process_Event): Updated.

2020-05-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Install_Font): Remove unused buffer.

2029-05-09  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.2 released.
	==========================


	Tag sources with `VER-2-10-2.

	* README: Updated.
	* man/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2020-05-08  Werner Lemberg  <wl@gnu.org>

	* src/ftdump.c (main): Fix thinko introduced in commit from
	2020-05-01.

2020-05-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* ftcommon.c (FTDemo_Draw_Header): Right-flush filename.

2020-05-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Move man pages: src/*.1 -> man/*.1

2020-05-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (unixdev): Do not call pkg-config repeatedly.

2020-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (FT_INCLUDES): Remove redundant BUILD_DIR.

2020-05-01  David Turner  <david@freetype.org>

	Fix compilation warnings (#58257).

	* graph/x11/grx11.c (gr_x11_surface_listen_event): Change return
	type of to match the expected type.

	* src/compos.c, src/ftchkwd.c, src/ftdump.c, src/ftlint.c,
	src/ftmemchk.c, src/ftsbit.c, src/fttimer.c, src/fttry.c (main):
	Remove problematic uses of `strncpy' and replace them with